--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.1"
   },
