--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.5",
     "v-mask": "^2.3.0",
     "vue": "^2.6.11",
-    "vue-js-modal": "^2.0.1"
+    "vue-js-modal": "^2.0.1",
+    "vue-masked-input": "^0.5.2",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
